--- a/Website/contact.html
+++ b/Website/contact.html
@@ -19,7 +19,7 @@
 <meter min="0" max="100" value="50">100%</meter><br>
 <meter min="0" max="10" value="8">100%</meter>
 <br>
-<iframe src="file:///C:/Users/DeLL/Desktop/Website/index.html" width="800px" height="400px"></iframe>
+<iframe src="https://scriptcryler.github.io/website/Website/index.html" width="800px" height="400px"></iframe>
 <br>
 <br>
 <bdo dir="rtl"> HAKUNA MATATA</bdo>
